chore: fix typo on package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "P4g4rm3",
+  "name": "p4g4rm3",
   "version": "0.0.1",
   "description": "Validador de senha em nossos serviços",
   "main": "index.js",
