--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Validador de senha em nossos serviços",
   "main": "index.js",
   "scripts": {
-    "test": "ava"
+    "test": "ava --verbose"
   },
   "repository": {
     "type": "git",
@@ -20,9 +20,19 @@
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "ava": "1.0.0-rc.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "ava": "^1.0.1",
     "eslint": "^5.9.0",
     "eslint-config-pagarme-base": "2.0.0",
     "eslint-plugin-import": "^2.14.0"
+  },
+  "ava": {
+    "require": [
+      "@babel/register"
+    ]
   }
 }
