--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "p4g4rm3",
   "version": "0.0.1",
   "description": "Validador de senha em nossos serviços",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "build": "rm -Rf dist/*; env NODE_ENV=production babel src -d dist --source-maps",
     "test": "ava --verbose"
   },
   "repository": {
