--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "p4g4rm3",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Validador de senha em nossos serviços",
   "main": "dist/index.js",
   "scripts": {
     "prepublish": "npm run build",
-    "build": "rm -Rf dist/*; env NODE_ENV=production babel src -d dist --source-maps",
+    "build": "NODE_ENV=production rollup -c",
     "test": "ava --verbose"
   },
   "repository": {
@@ -19,12 +19,14 @@
   },
   "homepage": "https://github.com/pagarme/p4g4rm3#readme",
   "dependencies": {
+    "rollup": "^1.1.2",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-uglify": "^6.0.2",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
-    "@babel/plugin-transform-modules-commonjs": "^7.2.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/register": "^7.0.0",
     "ava": "^1.0.1",
